[gd_scene load_steps=5 format=2]

[ext_resource path="res://AudioMixerVisualizer/AudioMixerDebugVisualization.gd" type="Script" id=1]
[ext_resource path="res://AudioMixerVisualizer/AudioMixerMeterDrawer.gd" type="Script" id=2]
[ext_resource path="res://AudioMixerVisualizer/AudioMixerVolumeDrawer.gd" type="Script" id=3]
[ext_resource path="res://AudioMixerVisualizer/AudioMixerDebugFont.tres" type="DynamicFont" id=4]

[node name="AudioDebugVisualizer" type="CanvasLayer"]
pause_mode = 2
layer = 128

[node name="Mixer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -140.0
margin_right = 500.0
margin_bottom = -10.0
mouse_filter = 2
script = ExtResource( 1 )
font_fx = ExtResource( 4 )

[node name="Container" type="HBoxContainer" parent="Mixer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
mouse_filter = 2
alignment = 1

[node name="Bus" type="PanelContainer" parent="Mixer/Container"]
margin_left = 470.0
margin_right = 530.0
margin_bottom = 130.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 60, 0 )
rect_pivot_offset = Vector2( 0, 200 )
mouse_filter = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Mixer/Container/Bus"]
margin_left = 7.0
margin_top = 7.0
margin_right = 53.0
margin_bottom = 123.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="label_name" type="Label" parent="Mixer/Container/Bus/VBox"]
margin_right = 46.0
margin_bottom = 14.0
text = "Bus"
align = 1
clip_text = true

[node name="label_peak" type="Label" parent="Mixer/Container/Bus/VBox"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_top = 18.0
margin_right = 46.0
margin_bottom = 32.0
text = "-0.1"
align = 1

[node name="HBox" type="HBoxContainer" parent="Mixer/Container/Bus/VBox"]
margin_top = 36.0
margin_right = 46.0
margin_bottom = 116.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Meter" type="Panel" parent="Mixer/Container/Bus/VBox/HBox"]
margin_right = 20.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2
script = ExtResource( 2 )

[node name="HBox" type="HBoxContainer" parent="Mixer/Container/Bus/VBox/HBox/Meter"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="fill_left" type="ColorRect" parent="Mixer/Container/Bus/VBox/HBox/Meter/HBox"]
modulate = Color( 0.0784314, 0.737255, 0.309804, 1 )
margin_right = 7.0
margin_bottom = 78.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="fill_right" type="ColorRect" parent="Mixer/Container/Bus/VBox/HBox/Meter/HBox"]
modulate = Color( 0.0784314, 0.737255, 0.309804, 1 )
margin_left = 11.0
margin_right = 18.0
margin_bottom = 78.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Volume" type="Panel" parent="Mixer/Container/Bus/VBox/HBox"]
margin_left = 24.0
margin_right = 29.0
margin_bottom = 80.0
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="VBox_fx" type="VBoxContainer" parent="Mixer/Container/Bus/VBox/HBox"]
visible = false
margin_left = 33.0
margin_right = 46.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="mouse_entered" from="Mixer" to="Mixer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Mixer" to="Mixer" method="_on_mouse_exited"]
